tests/valid_inputs/unary_plus.cpp
// test that unary plus works

int main() {
	int a = 42;
	return +a;
}
