tests/invalid_inputs/sema/fo_different_ret_const.cpp
// test that the compiler catches differently const qualified return types

int f();
const int f();
